# TTT4145-Radio-lab

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: config.h
simulations/: README.md  about.txt  pll.py  qpsk_modulation.py
simulations/3B1Bfault_detection/: 3B1Bfault_detection.py  README.md
src/: README.md  main_rx.cpp  main_rxtx.cpp
src/core/: fir.cpp  fir.h  modem.cpp  modem.h  root_raised_cosine.cpp  root_raised_cosine.h  spsc_ring.cpp  spsc_ring.h
src/fault_protection/: fault_protection.cpp  fault_protection.h
src/gui/: qcustomplot.cpp  window.cpp  window.h
src/modem/: gray_code_generator.py  modem.cpp  modem.h
src/modulator/: modulators.cpp
src/radio/: pluto_sdr.cpp  pluto_sdr.h  radio_rx.cpp  radio_rx.h
src/tx/: fault_protection.cpp  fault_protection.h  modulators.cpp  modulators.h
src/tx/gray_codes/: gray_code_generator.py  graycodes.csv
tests/: core_test.cpp  spsc_test.cpp  tests.h  tx_tests.cpp
